# knobui

./: .gitignore  CHANGES_SUMMARY.md  CMakeLists.txt  CURRENT_STATUS.md  FLASH-TROUBLESHOOTING.md  LICENSE  PROJECT_STATUS.md  README.md  SETUP.md  UPLOAD_COMMANDS.txt  build.bat  flash-fix.ps1  quick-update.ps1  quick-update.sh  sdkconfig.defaults  sdkconfig.new  validate.py  verify-esp-idf.bat
main/: CMakeLists.txt  basic_test.c  basic_test.h  lcd_driver.c  lcd_driver.h  lv_conf.h  main.c  ui_events.c  ui_events.h  ui_helpers.c  user_config.h
main/components/: ui_comp_buttondown.c  ui_comp_buttontop.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.h  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_pulsegroup.h  ui_comp_titlegroup.c  ui_comp_todayweathergroup.c  ui_comp_todayweathergroup.h
main/images/: ui_img_arrow_png.c  ui_img_bg3_png.c  ui_img_btn_bg_1_png.c  ui_img_btn_bg_3_png.c  ui_img_clockwise_hour_png.c  ui_img_clockwise_sec_png.c  ui_img_flash_png.c  ui_img_step_png.c
main/screens/: ui_LedColor.c  ui_LedColor.h  ui_Menu.c  ui_Menu.h  ui_watch_analog.c  ui_watch_analog.h
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
main/ui/components/: ui_comp.c  ui_comp.h  ui_comp_batterygroup.c  ui_comp_batterygroup.h  ui_comp_buttondown.c  ui_comp_buttondown.h  ui_comp_buttonround.c  ui_comp_buttonround.h  ui_comp_buttontop.c  ui_comp_buttontop.h  ui_comp_dailymissiongroup.c  ui_comp_dailymissiongroup.h  ui_comp_dategroup.c  ui_comp_dategroup.h  ui_comp_forecastgroup.c  ui_comp_forecastgroup.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_pulsegroup.c  ui_comp_pulsegroup.h  ui_comp_stepgroup.c  ui_comp_stepgroup.h  ui_comp_titlegroup.c  (+5 more)
(+55 files in other folders)
