SET(SOURCES components/ui_comp_batterygroup.c
    components/ui_comp_buttondown.c
    components/ui_comp_buttonround.c
    components/ui_comp_buttontop.c
    components/ui_comp_dailymissiongroup.c
    components/ui_comp_dategroup.c
    components/ui_comp_forecastgroup.c
    components/ui_comp_pulsegroup.c
    components/ui_comp_stepgroup.c
    components/ui_comp_titlegroup.c
    components/ui_comp_todayweathergroup.c
    components/ui_comp_weathergroup1.c
    components/ui_comp.c
    screens/ui_watch_analog.c
    screens/ui_Menu.c
    screens/ui_LedColor.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_bg1_png.c
    images/ui_img_flash_png.c
    images/ui_img_weather_sun_cloud_png.c
    images/ui_img_step_png.c
    images/ui_img_daily_mission_png.c
    images/ui_img_call1_png.c
    images/ui_img_btn_bg_1_png.c
    images/ui_img_weather_png.c
    images/ui_img_btn_bg_3_png.c
    images/ui_img_clockwise_sec_png.c
    images/ui_img_clockwise_min_png.c
    images/ui_img_clockwise_hour_png.c
    images/ui_img_arrow_png.c
    images/ui_img_bg3_png.c
    fonts/ui_font_H1.c
    fonts/ui_font_Number_big.c
    fonts/ui_font_Number_extra.c
    fonts/ui_font_Subtitle.c
    fonts/ui_font_Title.c)

add_library(ui ${SOURCES})
